@@ -1,3 +1,7 @@
+2007-04-26 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 394: changed "min_bytes" to "unit_bytes" in
+	           dc1394_format7_get_packet_para()
+	
 2007-03-18 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 393: Add a "juju" directory for the new kernel stack from Kristian
 		   Hogsberg. Thanks to... Kristian Hogsberg for the big patch ;)
